--- a/index.html
+++ b/index.html
@@ -4,34 +4,15 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="css/style.css">
-      <title>Trivia Game</title>
+      <link rel="stylesheet" href="css/welcome.css">
+      <title>Welcome Screen</title>
 </head>
 <body>
-      <div id="main-container">
-            <h1>Multiple Choice Quiz Game</h1>
-            <div class="question-container grid">
-                  <!-- <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, est?
-                  </p> -->
-            </div>
-            <div class="answer-container grid grid-col-2">
-                  <div class="ans-box grid grid-answers">
-                        <p class="grid">A</p>
-                        <p>Answer</p>
-                  </div>
-                  <div class="ans-box grid grid-answers">
-                        <p class="grid">B</p>
-                        <p>Answer</p>
-                  </div>
-                  <div class="ans-box grid grid-answers">
-                        <p  class="grid">C</p>
-                        <p>Answer</p>
-                  </div>
-                  <div class="ans-box grid grid-answers">
-                        <p  class="grid">D</p>
-                        <p>Answer</p>
-                  </div>
+      <div class="container">
+            <div id="home" class="flex-center flex-column">
+                  <h1>Test Your Knowledge</h1>
+                  <a class="btn" href="html/game.html">Play</a>
+                  <a class="btn">High Scores</a>
             </div>
       </div>
       <script src="js/script.js"></script>
