Updated styling for answer choices

--- a/html/game.html
+++ b/html/game.html
@@ -15,8 +15,25 @@
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque, est?
                   </p> -->
             </div>
-            <div class="answer-container grid grid-col-2">
-                  <div class="ans-box grid grid-answers">
+            <div class="choices-container grid grid-col-2">
+                  <div class="choice-container">
+                        <p class="choice-ltr">A</p>
+                        <p class="choice-txt">Choice 1</p>
+                  </div>
+                  <div class="choice-container">
+                        <p class="choice-ltr">B</p>
+                        <p class="choice-txt">Choice 2</p>
+                  </div>
+                  <div class="choice-container">
+                        <p class="choice-ltr">C</p>
+                        <p class="choice-txt">Choice 3</p>
+                  </div>
+                  <div class="choice-container">
+                        <p class="choice-ltr">D</p>
+                        <p class="choice-txt">Choice 4</p>
+                  </div>
+                  
+                  <!-- <div class="ans-box grid grid-answers">
                         <p class="grid">A</p>
                         <p>Answer</p>
                   </div>
@@ -31,7 +48,7 @@
                   <div class="ans-box grid grid-answers">
                         <p  class="grid">D</p>
                         <p>Answer</p>
-                  </div>
+                  </div> -->
             </div>
       </div>
       <script src="../js/script.js"></script>
